# sqlx_mysql_demo

./: Cargo.toml  README.MD
src/: main.rs
