[package]
name = "mysql_ord_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
